--- a/run-buddy-project.html
+++ b/run-buddy-project.html
@@ -44,11 +44,11 @@
       <!-- Add form element-->
       <form>
         <label for="name">Enter full name:</label>
-        <input type="text" placeholder="Your Name" name="name" id="name" />
+        <input type="text" placeholder="Your Name" name="name" id="name" class="form-input"/>
         <label for="email">Enter email address:</label>
-        <input type="email" placeholder="Email Address" name="email" id="email" />
+        <input type="email" placeholder="Email Address" name="email" id="email" class="form-input"/>
         <label type="Phone">Enter telephone number:</label>
-        <input type="tel" placeholder="Phone Number" name="Phone" id="Phone" />
+        <input type="tel" placeholder="Phone Number" name="Phone" id="Phone" class="form-input"/>
         <p>
           Have you worked with a trainer before?
           <input type="radio" name="trainer-confirm" id="trainer-yes" />
@@ -61,7 +61,10 @@
             I acknowledge I am at least 18 years or age 
         </label>
         <input type="checkbox" name="age-confirm" id="checkbox" />
-        </p>    
+        </p>
+        <button type="submit">
+           Get running!
+        </button>    
       </form>
     </div>
   </section>
