--- a/run-buddy-project.html
+++ b/run-buddy-project.html
@@ -72,7 +72,10 @@
   <section id="what-we-do" class="intro">
     <h2 class="section-title primary-border">What We Do</h2>
     <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda aperiam, repellat temporibus quos eius totam, quasi reprehenderit dolorem perspiciatis corrupti laboriosam error repudiandae! Quasi omnis praesentium necessitatibus eum mollitia sint.
+      butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue
+      Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin
+      fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz
+      sustainable Intelligentsia umami deep v craft
     </p>
   </section>
 
@@ -81,34 +84,44 @@
     <h2 class="section-title secondary-border">What You Do</h2>
 
     <div>
-      <!-- insert this img element-->
-      <img src="./assets/images/step-1.svg" alt=""/>
+      <img src="./assets/images/step-1.svg" alt="" />
       <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
       <p>You're already here, so why not?</p>
     </div>
 
     <div>
-      <img src="./assets/images/step-2.svg" alt=""/>
-      <h3> Step 2: <span>Consult with One of Our Trainers.</span></h3>
+      <img src="./assets/images/step-2.svg" alt="" />
+      <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
       <p>Are you here to build muscle, lose weight, or just feel good?</p>
     </div>
 
     <div>
-      <img src="./assets/images/step-3.svg" alt=""/>
+      <img src="./assets/images/step-3.svg" alt="" />
       <h3>Step 3: <span>Get Running.</span></h3>
       <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
     </div>
 
     <div>
-      <img src="./assets/images/step-4.svg" alt=""/>
+      <img src="./assets/images/step-4.svg" alt="" />
       <h3>Step 4: <span>See Results.</span></h3>
-      <p>Bi-weekly checkins with your trainer will keep you focused.</p>
+      <p>Bi-weekly checkins with your trainer will keep you focused</p>
     </div>
   </section>
 
   <!-- "meet the trainers" section -->
-  <section>
-    <h2>Meet The Trainers</h2>
+  <section id="your-trainers" class="trainers"> 
+    <h2 class="section-title primary-border"
+      Meet The Trainers>
+    </h2>
+    <article class="trainer">
+      <img src="assets/images/trainer-1.jpg" alt="Arron Stephen in his workout clothes, ready to pump iron" />
+      <div class="trainer-bio">
+        <h3> Arron Stephens</h3>
+        <h4>Speed / Strength</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia quod eveniet non architecto ut aperiam quam. Quos mollitia, asperiores inventore fugit blanditiis laborum vel tempora magni voluptate fuga sapiente recusandae.
+       </p>
+      </div>
+    </article>
   </section>
 
   <!-- "reach out" section -->
