--- a/index.html
+++ b/index.html
@@ -110,36 +110,45 @@
 
   <!-- "meet the trainers" section -->
   <section id="your-trainers" class="trainers">
-    <h2 class="section-title primary-border">
-      Meet The Trainers
-    </h2>
+    <h2 class="section-title primary-border">Meet The Trainers</h2>
     <article class="trainer">
-      <img src="assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron.">
+      <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
       <div class="trainer-bio text-left">
         <h3>Arron Stephens</h3>
         <h4>Speed / Strength</h4>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos sint assumenda itaque enim dolorum exercitationem tempora deserunt veritatis necessitatibus facilis. Architecto nostrum saepe repellendus quod. Repudiandae enim similique dolorem praesentium?
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+          sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
         </p>
       </div>
     </article>
+
     <!-- second trainer bio -->
     <article class="trainer">
-     <div class="trainer-bio text-right">
-       <h3>Joanna Gill</h3>
-       <h4>Endurance</h4>
-       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem odit beatae, quisquam asperiores facilis earum impedit ipsam eius ducimus sed ea voluptates nulla cum magni. In odio a error odit.
-      </p>
-     </div>  
-     <img src="assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+      <div class="trainer-bio text-right">
+        <h3>Joanna Gill</h3>
+        <h4>Endurance</h4>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+          sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+        </p>
+      </div>
+      <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
     </article>
+
     <!-- third trainer bio -->
     <article class="trainer">
-      <img src="assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifiting comically small pink weight"/>
+      <img src="./assets/images/trainer-3.jpg"
+        alt="Harry Smith wearing a headband and lifting comically small pink weights" />
       <div class="trainer-bio text-left">
-        <h3>"the Headband" Smith</h3>
+        <h3>Harry "the Headband" Smith</h3>
         <h4>Strength</h4>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero deserunt atque pariatur earum est facilis quam. Distinctio, laboriosam neque. Nulla ad nam distinctio eveniet, iure eum nihil unde modi mollitia.
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+          sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
         </p>
       </div>
     </article>
@@ -148,6 +157,15 @@
   <!-- "reach out" section -->
   <section>
     <h2>Reach Out</h2>
+    <div class="contact-info">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3146.0107711907885!2d-120.42504448461484!3d37.95353447972727!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8090c46e315aaf1b%3A0xb32d2fcd2023b726!2sMain%20St%2C%20Jamestown%2C%20CA%2095327!5e0!3m2!1sen!2sus!4v1636069307798!5m2!1sen!2sus" 
+      width="400" 
+      height="400" 
+      style="border:0;" 
+      allowfullscreen="" 
+      loading="lazy">
+      </iframe>
+    </div>
   </section>
 
   <!-- footer -->
