added lists & anchor elements

--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 
 <header>
-  <h1>RUN BUDDY</h1>
+  <h1>
+    <a href="/">RUN BUDDY</a>
+  </h1>
   <nav>
   <!-- Unordered list element -->
     <ul>
-      <1i>
-        <!-- Anchor element -->
+      <!-- Listed anchor elements -->
+      <li>
         <a href="#what-we-do">What We Do</a>
       </1i>
       <li>
