trainer(s) bio css

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
   <section id="what-we-do" class="intro">
     <h2 class="section-title primary-border">What We Do</h2>
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quidem alias consequatur est magnam laudantium odio molestias quia explicabo saepe architecto aut quo, illo fugiat quos hic voluptas? Delectus, magnam!
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quidem alias consequatur est magnam laudantium odio
+      molestias quia explicabo saepe architecto aut quo, illo fugiat quos hic voluptas? Delectus, magnam!
     </p>
   </section>
 
@@ -82,39 +83,71 @@
 
     <div>
       <!-- insert this img element -->
-      <img src="assets/images/step-1.svg" alt=""/>
+      <img src="assets/images/step-1.svg" alt="" />
       <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
       <p>You're already here, so why not?</p>
     </div>
 
     <div>
       <!-- insert this img element -->
-      <img src="assets/images/step-2.svg" alt=""/>
+      <img src="assets/images/step-2.svg" alt="" />
       <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
       <p>Are you here to build muscle, lose weight, or just feel good?</p>
     </div>
 
     <div>
       <!-- insert this img element -->
-      <img src="assets/images/step-3.svg" alt=""/>
+      <img src="assets/images/step-3.svg" alt="" />
       <h3>Step 3: <span> Running.</span></h3>
       <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
     </div>
 
     <div>
       <!-- insert this img element -->
-      <img src="assets/images/step-4.svg" alt=""/>
-    <h3>Step 4: <span>See Results.</span></h3>
-    <p>Bi-weekly checkins with your trainer will keep you focused</p>
+      <img src="assets/images/step-4.svg" alt="" />
+      <h3>Step 4: <span>See Results.</span></h3>
+      <p>Bi-weekly checkins with your trainer will keep you focused</p>
     </div>
 
   </section>
 
   <!-- "meet the trainers" section -->
-  <section id="your-trainers">
-    <h2>Meet The Trainers</h2>
+  <section id="your-trainers" class="trainers">
+    <h2 class="section-title primary-border">Meet The Trainers</h2>
+    <article class="trainer">
+      <img src="assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron"  />
+      <div class="trainer-bio text-left">
+        <h3>Arron Stephens</h3>
+        <h4>Speed/Strength</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi nobis sed corporis in aliquid natus, aut
+          voluptates fuga neque quos et, nemo sequi? Itaque veniam ratione, deserunt nam tenetur voluptas.
+        </p>
+      </div>
+    </article>
+  <!-- second trainer bio -->  
+    <article class="trainer">
+      <div class="trainer-bio text-right">
+        <h3>Joanna Gill</h3>
+        <h4>Endurance</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ratione pariatur ut numquam quas est assumenda in dicta, corporis nostrum nisi quo sint, reprehenderit accusamus accusantium quibusdam consequatur ipsa voluptates.
+        </p>
+      </div>
+      <img src="assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout"/>
+    </article>
   </section>
-
+  <!-- third trainer bio -->
+  <article class="trainer">
+    <img src="assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights"/>
+    <div class="trainer-bio text-left">
+      <h3>Harry "the Headband" Smith</h3>
+      <h4>Strength</h4>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta tenetur assumenda consectetur aut rerum dolorem tempore distinctio repudiandae cum, sapiente reiciendis nulla, similique sint minima iure aliquid ad, ullam molestias.
+      </p>
+    </div>
+  </article>
   <!-- "reach out" section -->
   <section id="reach-out">
     <h2>Reach Out</h2>
