fixed trainer HTML

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   <section id="your-trainers" class="trainers">
     <h2 class="section-title primary-border">Meet The Trainers</h2>
     <article class="trainer">
-      <img src="assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron"  />
+      <img src="assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
       <div class="trainer-bio text-left">
         <h3>Arron Stephens</h3>
         <h4>Speed/Strength</h4>
@@ -125,29 +125,37 @@
         </p>
       </div>
     </article>
-  <!-- second trainer bio -->  
+
+    <!-- second trainer bio -->
     <article class="trainer">
       <div class="trainer-bio text-right">
         <h3>Joanna Gill</h3>
         <h4>Endurance</h4>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ratione pariatur ut numquam quas est assumenda in dicta, corporis nostrum nisi quo sint, reprehenderit accusamus accusantium quibusdam consequatur ipsa voluptates.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ratione pariatur ut numquam quas est assumenda
+          in dicta, corporis nostrum nisi quo sint, reprehenderit accusamus accusantium quibusdam consequatur ipsa
+          voluptates.
         </p>
       </div>
-      <img src="assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout"/>
+      <img src="assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
     </article>
-  </section>
+
   <!-- third trainer bio -->
   <article class="trainer">
-    <img src="assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights"/>
+    <img src="assets/images/trainer-3.jpg"
+      alt="Harry Smith wearing a headband and lifting comically small pink weights" />
     <div class="trainer-bio text-left">
       <h3>Harry "the Headband" Smith</h3>
       <h4>Strength</h4>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta tenetur assumenda consectetur aut rerum dolorem tempore distinctio repudiandae cum, sapiente reiciendis nulla, similique sint minima iure aliquid ad, ullam molestias.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta tenetur assumenda consectetur aut rerum dolorem
+        tempore distinctio repudiandae cum, sapiente reiciendis nulla, similique sint minima iure aliquid ad, ullam
+        molestias.
       </p>
     </div>
   </article>
+</section>
+
   <!-- "reach out" section -->
   <section id="reach-out">
     <h2>Reach Out</h2>
