--- a/index.html
+++ b/index.html
@@ -140,25 +140,50 @@
       <img src="assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
     </article>
 
-  <!-- third trainer bio -->
-  <article class="trainer">
-    <img src="assets/images/trainer-3.jpg"
-      alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-    <div class="trainer-bio text-left">
-      <h3>Harry "the Headband" Smith</h3>
-      <h4>Strength</h4>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta tenetur assumenda consectetur aut rerum dolorem
-        tempore distinctio repudiandae cum, sapiente reiciendis nulla, similique sint minima iure aliquid ad, ullam
-        molestias.
-      </p>
-    </div>
-  </article>
-</section>
+    <!-- third trainer bio -->
+    <article class="trainer">
+      <img src="assets/images/trainer-3.jpg"
+        alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+      <div class="trainer-bio text-left">
+        <h3>Harry "the Headband" Smith</h3>
+        <h4>Strength</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta tenetur assumenda consectetur aut rerum
+          dolorem
+          tempore distinctio repudiandae cum, sapiente reiciendis nulla, similique sint minima iure aliquid ad, ullam
+          molestias.
+        </p>
+      </div>
+    </article>
+  </section>
 
   <!-- "reach out" section -->
   <section id="reach-out">
     <h2>Reach Out</h2>
+    <div class="contact-info">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3146.0107711907885!2d-120.42504448461484!3d37.95353447972727!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8090c46e315aaf1b%3A0xb32d2fcd2023b726!2sMain%20St%2C%20Jamestown%2C%20CA%2095327!5e0!3m2!1sen!2sus!4v1636678663452!5m2!1sen!2sus"
+        width="400" 
+        height="400" 
+        style="border:0;" 
+        allowfullscreen="" 
+        loading="lazy">
+      </iframe>
+     </div>
+     <div>
+       <h3>Run Buddy</h3>
+       <p>Any questions or concerns before signing up?
+         <br />
+         Let us know and we'll be happy to talk to you! 
+       </p>
+       <address>
+         55 Main Street <br />
+         Jamestown, CA <br />
+         12345<br />
+         P: 555.RUN.BUDZ (555.786.2839)<br />
+         E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+       </address>
+     </div>
   </section>
 
   <!-- footer -->
