--- a/index.html
+++ b/index.html
@@ -72,8 +72,10 @@
   <section id="what-we-do" class="intro">
     <h2 class="section-title primary-border">What We Do</h2>
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quidem alias consequatur est magnam laudantium odio
-      molestias quia explicabo saepe architecto aut quo, illo fugiat quos hic voluptas? Delectus, magnam!
+      butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue
+      Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin
+      fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz
+      sustainable Intelligentsia umami deep v craft
     </p>
   </section>
 
@@ -82,46 +84,42 @@
     <h2 class="section-title secondary-border">What You Do</h2>
 
     <div>
-      <!-- insert this img element -->
-      <img src="assets/images/step-1.svg" alt="" />
+      <img src="./assets/images/step-1.svg" alt="" />
       <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
       <p>You're already here, so why not?</p>
     </div>
 
     <div>
-      <!-- insert this img element -->
-      <img src="assets/images/step-2.svg" alt="" />
+      <img src="./assets/images/step-2.svg" alt="" />
       <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
       <p>Are you here to build muscle, lose weight, or just feel good?</p>
     </div>
 
     <div>
-      <!-- insert this img element -->
-      <img src="assets/images/step-3.svg" alt="" />
-      <h3>Step 3: <span> Running.</span></h3>
+      <img src="./assets/images/step-3.svg" alt="" />
+      <h3>Step 3: <span>Get Running.</span></h3>
       <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
     </div>
 
     <div>
-      <!-- insert this img element -->
-      <img src="assets/images/step-4.svg" alt="" />
+      <img src="./assets/images/step-4.svg" alt="" />
       <h3>Step 4: <span>See Results.</span></h3>
       <p>Bi-weekly checkins with your trainer will keep you focused</p>
     </div>
-
   </section>
 
   <!-- "meet the trainers" section -->
   <section id="your-trainers" class="trainers">
     <h2 class="section-title primary-border">Meet The Trainers</h2>
     <article class="trainer">
-      <img src="assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+      <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
       <div class="trainer-bio text-left">
         <h3>Arron Stephens</h3>
-        <h4>Speed/Strength</h4>
+        <h4>Speed / Strength</h4>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi nobis sed corporis in aliquid natus, aut
-          voluptates fuga neque quos et, nemo sequi? Itaque veniam ratione, deserunt nam tenetur voluptas.
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+          sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
         </p>
       </div>
     </article>
@@ -132,26 +130,25 @@
         <h3>Joanna Gill</h3>
         <h4>Endurance</h4>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ratione pariatur ut numquam quas est assumenda
-          in dicta, corporis nostrum nisi quo sint, reprehenderit accusamus accusantium quibusdam consequatur ipsa
-          voluptates.
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+          sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
         </p>
       </div>
-      <img src="assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+      <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
     </article>
 
     <!-- third trainer bio -->
     <article class="trainer">
-      <img src="assets/images/trainer-3.jpg"
+      <img src="./assets/images/trainer-3.jpg"
         alt="Harry Smith wearing a headband and lifting comically small pink weights" />
       <div class="trainer-bio text-left">
         <h3>Harry "the Headband" Smith</h3>
         <h4>Strength</h4>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta tenetur assumenda consectetur aut rerum
-          dolorem
-          tempore distinctio repudiandae cum, sapiente reiciendis nulla, similique sint minima iure aliquid ad, ullam
-          molestias.
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+          sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
         </p>
       </div>
     </article>
@@ -159,29 +156,30 @@
 
   <!-- "reach out" section -->
   <section id="reach-out" class="contact">
-    <h2 class="section-title secondary-border ">Reach Out</h2>
+    <h2 class="section-title secondary-border">Reach Out</h2>
     <div class="contact-info">
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3146.0107711907885!2d-120.42504448461484!3d37.95353447972727!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8090c46e315aaf1b%3A0xb32d2fcd2023b726!2sMain%20St%2C%20Jamestown%2C%20CA%2095327!5e0!3m2!1sen!2sus!4v1636678663452!5m2!1sen!2sus"
+      <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3147.1079747227936!2d-120.42364418397035!3d37.92790791110593!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8090c49129b6ac57%3A0xb56c7eb95a2cd8bd!2sMain%20St%2C%20California%2095327!5e0!3m2!1sen!2sus!4v1616426329495!5m2!1sen!2sus"
         style="border:0;" 
-        allowfullscreen="" 
+        allowfullscreen=""
         loading="lazy">
       </iframe>
-     </div>
-     <div>
-       <h3>Run Buddy</h3>
-       <p>Any questions or concerns before signing up?
-         <br />
-         Let us know and we'll be happy to talk to you! 
-       </p>
-       <address>
-         55 Main Street <br />
-         Jamestown, CA <br />
-         12345<br />
-         P: 555.RUN.BUDZ (555.786.2839)<br />
-         E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-       </address>
-     </div>
+      <div>
+        <h3>Run Buddy</h3>
+        <p>
+          Any questions or concerns before signing up?
+          <br />
+          Let us know and we'll be happy to talk to you!
+        </p>
+        <address>
+          55 Main Street <br />
+          Some Town, Ca <br />
+          12345<br />
+          P: 555.RUN.BUDZ (555.786.2839)<br />
+          E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+        </address>
+      </div>
+    </div>
   </section>
 
   <!-- footer -->
