--- a/index.html
+++ b/index.html
@@ -38,12 +38,10 @@
 
   <!-- hero/jumbotron -->
   <section class="hero">
-    <div class="hero-cta">
-      <h2>Start Building Habits.</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique incidunt aliquid enim corporis ratione tenetur? Porro vero dolor delectus itaque dolore illo earum omnis aliquam? Tempora voluptate dignissimos id iste?
-      </p>
-    </div>
+    <h2>Start Building Habits.</h2>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem nisi reiciendis aliquid veritatis harum nulla eaque dolores est sit exercitationem? Ab blanditiis vel delectus est rem ad atque placeat nam.
+    </p>
     <div class="hero-form">
       <h3>Get Started Today</h3>
       <p>Fill out this form and one of our trainers will schedule a consult</p>
