--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
         </li>
         <li>
           <a href="#what-you-do">What You Do</a>
-        </li>
         <li>
           <a href="#your-trainers">Your Trainers</a>
         </li>
@@ -38,10 +37,12 @@
 
   <!-- hero/jumbotron -->
   <section class="hero">
+    <div class="hero-cta">
     <h2>Start Building Habits.</h2>
     <p>
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem nisi reiciendis aliquid veritatis harum nulla eaque dolores est sit exercitationem? Ab blanditiis vel delectus est rem ad atque placeat nam.
     </p>
+    </div>
     <div class="hero-form">
       <h3>Get Started Today</h3>
       <p>Fill out this form and one of our trainers will schedule a consult</p>
@@ -168,6 +169,19 @@
         allowfullscreen=""
         loading="lazy">
       </iframe>
+       <!-- Adding Contact Form + text feature-->
+       <div class="contact-form">
+        <h3>Contact Us</h3>
+        <form>
+          <label for="contact-name">Your Name</label>
+          <input type="text" id="contact-name" placeholder="Your Name"/>
+
+          <label for="contact-message">Message</label>
+          <textarea id="contact-message" placeholder="Message"></textarea>
+
+          <button type="submit">Submit</button>
+        </form>
+      </div>
       <div>
         <h3>Run Buddy</h3>
         <p>
